# od-cpu-inference-dg

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
sh/: download_coco.sh  download_weights.sh
src/: evaluate-models-video.py  evaluate_models-coco.py  evaluate_models.py  inference.py
