[tool.poetry]
name = "od-cpu-inference"
version = "0.1.0"
description = ""
authors = ["Martin Kalema <kalema.martin@aibos2100.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = {version = "^2.5.1+cpu", python = ">=3.10,<3.11", platform = "linux", source = "torch-cpu"}
torchvision = {version = "^0.20.1+cpu", python = ">=3.10,<3.11", platform = "linux", source = "torch-cpu"}
tensorflow-cpu = "2.11.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
opencv-python = "^4.10.0.84"
pyyaml = "^6.0.2"
scipy = "^1.14.1"
tqdm = "^4.67.1"
onnxruntime = "^1.20.1"
psutil = "^6.1.0"
pillow = "^11.0.0"
py-cpuinfo = "^9.0.0"
tflite = "^2.10.0"
paddlepaddle = "2.4.2"
ultralytics = "^8.3.51"
pycocotools = "^2.0.8"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.26.1"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 119

[tool.isort]
profile = "black"
py_version = 312
line_length = 119

[tool.ruff]
target-version = "py310"
line-length = 119
select = ["ALL"]
ignore = ["ANN", "D", "TD", "DTZ","COM","EM","FBT", "INP", "ERA", "E501","N802", "N806", "S101", "S311", "S324", "RUF001", "RUF002", "RUF003"]
exclude = ["/workspace/src/libs"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
strict = true
plugins = [
  "numpy.typing.mypy_plugin"
]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
fmt = "black ."
isort = "isort ."
test = "pytest --cov=src/services -sv --disable-warnings tests/integration"
fmt-test = ["fmt", "isort", "test"]
fmt-test-lint = ["fmt", "isort", "lint", "test"]